# learn-pytest-with-github-actions

./: README.md  pyproject.toml
.github/workflows/: pytest.yml
src/learn_pytest_with_github_actions/: main.py
tests/: test_main.py
