[project]
name = "learn-pytest-with-github-actions"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yokoba", email = "31529581+yokoba@users.noreply.github.com" }
]
dependencies = [
    "pytest>=8.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "isort>=5.13.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/learn_pytest_with_github_actions"]
